@@ -60,6 +60,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #4458: getopt.gnu_getopt() now recognizes a single "-" as an argument,
+  not a malformed option.
+
 - Added the subprocess.check_output() convenience function to get output
   from a subprocess on success or raise an exception on error.
 
